testing/tests/melt/negative/lvalues_11.c

int main() 
{
    int n = 0;
    ~n = 2; // Complement converts lvalues to rvalues.
    return 0;
}
